fix: Add fix for Investor posts not visible in smaller screens

--- a/src/pages/Investor/ProtectedInvestorRoutes/ProtectedInvestorRoutes.scss
+++ b/src/pages/Investor/ProtectedInvestorRoutes/ProtectedInvestorRoutes.scss
@@ -108,7 +108,7 @@
 
 @media (max-width: 468px) {
   .newInvestor_container {
-    background-color: white;
+    background-color: #f9faf3;
     .sidebar {
       top: 11.5%;
       left: 0;
